--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,53 @@
   text-align: center;
 }
 
+.App-header{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: .5rem;
+}
+
+.logo{
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
+  margin-right: 1rem;
+  animation: logo infinite 5s;
+}
+
+
+@keyframes logo{
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.titulo p {
+  font-family: "Staatliches", cursive;
+  color: white;
+  font-size: 1.5em;
+  margin-left: 2.2rem;
+  transform: rotate(355deg);
+}
+
+.titulo h1 {
+  font-family: "Fira Sans Extra Condensed", sans-serif;
+  color: white;
+  font-size: 3em;
+  font-weight: lighter;
+  margin-bottom: -5.799rem;
+  margin-left: 1rem;
+}
+
+/* .App {
+  text-align: center;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +82,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
