--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -1,6 +1,15 @@
 .miCard{
     display: flex;
+    flex-wrap: wrap;
     align-content: center;
     justify-content: center;
-    margin: 0.5rem;
+    margin: 0.6rem;
+    margin-top: 5rem;
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+    .miCard{
+        width: 529px;
+    }
+   
 }
