--- a/src/components/Navbar/Nabvar.css
+++ b/src/components/Navbar/Nabvar.css
@@ -26,3 +26,28 @@
 .navbar>.container-xxl {
     margin-left: 6rem;
 }
+
+.navbar-toggler-icon {
+   color: white;
+}
+
+.navbar-toggler{
+    margin-top: .8rem;
+}
+
+@media (min-width: 481px) and (max-width: 787px) {
+  
+    .header{
+        min-width: 481px;
+        padding: 0 auto;
+    }
+    
+}
+@media (min-width: 320px) and (max-width: 480px){
+    .header{
+        min-width: 320px;
+        padding: 0 auto;
+    }
+
+   
+}
