--- a/src/components/ItemList/Item.css
+++ b/src/components/ItemList/Item.css
@@ -30,6 +30,11 @@
     color: white;
 }
 
+.card-text:last-child {
+    margin-bottom: 0;
+    font-family: 'Fira Sans Extra Condensed';
+}
+
 @media (min-width: 320px) and (max-width: 480px) {
   
     .photo{
