--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,15 @@
 .footContain{
     padding: 2rem;
+    margin-left: 3.5rem;
 }
 
 .foot{
-    margin-bottom: -60rem;
+    margin-top: 19rem;
 }
+
+.tit{
+    font-family: "Staatliches", cursive;
+    color: white;
+    font-size: 1.5em;
+}
+
