--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -2,6 +2,7 @@
     margin-left: 6rem;
 }
 
+
 .cartContain{
     padding: .5rem;
     border-radius: 10px;
@@ -65,7 +66,7 @@
         margin-left: -0.2999999999999998rem;
     }
     .clear2 {
-        margin-left: -2rem;
+        margin-left: 0;
     }
     .total {
         margin-top: 1rem;
@@ -77,8 +78,10 @@
     .contain {
         margin-left: 1rem;
     }
-    .talle {
-        margin-left: -2rem;
+    .comprar{
+        margin-left: -1rem;
+        width: 50%;
+        font-family: "Staatliches", cursive;
     }
     
 }
@@ -95,7 +98,8 @@
         margin-left: -0.2999999999999998rem;
     }
     .clear2 {
-        margin-left: -2rem;
+        margin-left: 0;
+        margin-bottom: -2rem;
     }
     .total {
         margin-top: 1rem;
@@ -107,8 +111,10 @@
     .contain {
         margin-left: 1rem;
     }
-    .talle {
-        margin-left: -2rem;
+    .comprar{
+        font-family: "Staatliches", cursive;
+        height: 25px;
+        margin-left: .5rem;
     }
 
 }
