--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -14,7 +14,22 @@
     color: white;
     font-family: "Staatliches", cursive;
 }
+.precio{
+    margin: auto;
+}
 
 .comprar{
     margin-top: 2rem;
 }
+
+@media (min-width: 481px) and (max-width: 787px) {
+    .talle{
+        margin-left: -1.5rem;
+    }
+}
+@media (min-width: 320px) and (max-width: 480px){
+    .talle {
+        margin-left: 0rem;
+    }
+}
+    
