--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -30,6 +30,7 @@
 
 .clear{
     margin-right: 1rem;
+    
 }
 
 .clear2{
@@ -54,6 +55,7 @@
     margin: .8rem;
 }
 
+
 @media (min-width: 481px) and (max-width: 787px) {
   
     .cartContain {
@@ -67,6 +69,7 @@
     }
     .clear2 {
         margin-left: 0;
+        margin-top: 1rem;
     }
     .total {
         margin-top: 1rem;
@@ -83,6 +86,15 @@
         width: 50%;
         font-family: "Staatliches", cursive;
     }
+    .seguir{
+        margin-top: 1rem;
+    }
+    .clear{
+        margin-top: 1rem;
+        
+    }
+    
+    
     
 }
 
@@ -116,5 +128,6 @@
         height: 25px;
         margin-left: .5rem;
     }
+    
 
 }
